--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -29,7 +29,7 @@
       },
       {
         "pagePath": "pages/lists/lists",
-        "text": "清单",
+        "text": "账单",
         "iconPath": "images/list1.png",
         "selectedIconPath": "images/list.png"
       },
