--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,7 +11,7 @@
     "pages/list_add/list_add"
   ],
   "window": {
-    "navigationBarTitleText": "金毛",
+    "navigationBarTitleText": "Note",
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#52495b",
