--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,8 @@
     "pages/lists/lists",
     "pages/lists_add/lists_add",
     "pages/list/list",
-    "pages/list_add/list_add"
+    "pages/list_add/list_add",
+    "pages/calendar/calendar"
   ],
   "window": {
     "navigationBarTitleText": "Note",
@@ -16,6 +17,12 @@
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#52495b",
     "navigationBarTextStyle": "white"
+  },
+  "plugins": {
+    "calendar": {
+      "version": "1.1.3",
+      "provider": "wx92c68dae5a8bb046"
+    }
   },
   "tabBar": {
     "color": "#bfc2c7",
