--- a/project.config.json
+++ b/project.config.json
@@ -11,7 +11,7 @@
 		"coverView": true,
 		"nodeModules": true,
 		"autoAudits": false,
-		"uglifyFileName": true,
+		"uglifyFileName": false,
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
