--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -21,7 +21,8 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#52495b",
-    "navigationBarTextStyle": "white"
+    "navigationBarTextStyle": "white",
+    "navigationStyle": "custom"
   },
   "plugins": {
     "calendar": {
