--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/activity/arrest/arrest",
     "pages/index/index",
     "pages/user/user",
     "pages/note_add/note_add",
