--- a/project.config.json
+++ b/project.config.json
@@ -23,7 +23,7 @@
 		"bundle": true
 	},
 	"appid": "wxcded22c20486fbe4",
-	"projectname": "money",
+	"projectname": "note_book",
 	"libVersion": "2.8.2",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
